<resources>
    <string name="app_name">Mis Gastos</string>
    <string name="welcome">¡Bienvenido a Mis Gastos!</string>
    <string name="text_request_name">¿Como te llamas?</string>
    <string name="sharedPrefName">sp_name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_create">Cargar</string>
    <string name="item_history">Historial</string>
    <string name="item_stats">Estadísticas</string>
    <string name="description">Descripción</string>
    <string name="upload">Cargar</string>
    <string name="amount">Monto</string>
    <string name="underconstruction">Sitio en construcción</string>
    <string name="unexpected_error">Ha ocurrido un error inesperado.</string>
    <string name="restart_app">Reiniciar aplicación</string>
    <string name="error_details">Detalles del error</string>
    <string name="category">Categoría</string>
    <string name="generate_pdf">GENERAR DOCUMENTO</string>
    <string name="default_amount">0</string>
    <string name="income">Ingreso</string>
    <string name="outflow">Gasto</string>
    <string name="movementListEmpty">No se obtuvo información.</string>
    <string name="email">mauu.godoy01@gmail.com</string>
    <string name="sendReport">ENVIAR REPORTE</string>
    <string name="expenses_por_month">Gastos mes a mes</string>
    <string name="totalMoneyLabel">Total registrado</string>
    <string name="total_movements_label">movimientos registrados</string>
    <string name="last_movement_label">Ultimo movimiento</string>
    <string name="total">TOTAL</string>
    <string name="save">guardar</string>
</resources>