<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".gui.fragments.CreateFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/margin_sm"
            android:paddingTop="100dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/none">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_amount"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal"
                    android:background="@color/none"
                    android:drawableStart="@drawable/ic_money"
                    android:textSize="@dimen/text_xl3"
                    android:text="@string/default_amount"
                    android:maxLength="12" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_xl2"
                android:hint="@string/description"
                android:paddingTop="@dimen/margin_xsm"
                app:counterMaxLength="@integer/descriptionMaxLength"
                app:startIconDrawable="@drawable/ic_short_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="@integer/descriptionMaxLength" />

            </com.google.android.material.textfield.TextInputLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_sm"
                android:background="@drawable/border_outline"
                android:padding="1.5dp">

                <com.jaredrummler.materialspinner.MaterialSpinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/category"
                    app:ms_arrow_tint="@color/secondary"
                    app:ms_hint="Categoría" />
            </FrameLayout>

            <Button
                android:id="@+id/btn_upload"
                style="@style/btn.primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_xl2"
                android:drawableEnd="@drawable/ic_upload"
                android:paddingHorizontal="@dimen/margin_sm"
                android:text="@string/upload" />
        </LinearLayout>

    </ScrollView>


</FrameLayout>