<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    tools:context=".gui.CustomActivityOnCrash"
    android:background="@color/primary"
    android:layout_height="match_parent"
    android:gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="@dimen/customactivityoncrash_activity_horizontal_margin"
            android:paddingTop="@dimen/customactivityoncrash_activity_vertical_margin"
            android:paddingRight="@dimen/customactivityoncrash_activity_horizontal_margin"
            android:paddingBottom="@dimen/customactivityoncrash_activity_vertical_margin">

            <ImageView
                android:id="@+id/customactivityoncrash_error_activity_image"
                android:layout_width="@dimen/image_welcome"
                android:layout_height="@dimen/image_welcome"
                android:contentDescription="@null"
                android:src="@drawable/ic_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/customactivityoncrash_activity_vertical_margin"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/unexpected_error"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/customactivityoncrash_error_activity_restart_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/customactivityoncrash_activity_vertical_margin"
                style="@style/btn.white"
                android:paddingHorizontal="10dp"
                android:text="@string/restart_app" />

            <Button
                android:layout_marginTop="@dimen/margin_md"
                android:id="@+id/customactivityoncrash_error_activity_more_info_button"
                android:layout_width="wrap_content"
                android:paddingHorizontal="10dp"
                android:layout_height="wrap_content"
                style="@style/btn.white"
                android:text="@string/error_details"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>