<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gui.fragments.MovementStatsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/margin_sm"
            android:layout_marginVertical="@dimen/margin_sm"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_totalMoneyLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/totalMoneyLabel"
                android:textAllCaps="true"
                android:textColor="@color/secondary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_totalMoney"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_sm"
                android:layout_marginBottom="@dimen/margin_md"
                android:textAllCaps="true"
                android:textSize="@dimen/text_md"
                android:textStyle="bold"
                tools:text="$65" />

            <TextView
                android:id="@+id/tv_totalMovementsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_movements_label"
                android:textAllCaps="true"
                android:textColor="@color/secondary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_totalMovements"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_sm"
                android:layout_marginBottom="@dimen/margin_md"
                android:textAllCaps="true"
                android:textSize="@dimen/text_md"
                android:textStyle="bold"
                tools:text="64" />

            <TextView
                android:id="@+id/tv_lastMovementLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_movement_label"
                android:textAllCaps="true"
                android:textColor="@color/secondary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_lastMovement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_sm"
                android:layout_marginBottom="@dimen/margin_md"
                android:textAllCaps="true"
                android:textSize="@dimen/text_md"
                android:textStyle="bold"
                tools:text="12/06/23" />

            <FrameLayout
                android:id="@+id/layout_frameChart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_generatePdf"
                style="@style/btn.primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_sm"
                android:layout_marginBottom="@dimen/margin_xl"
                android:drawableEnd="@drawable/ic_picture_pdf"
                android:paddingHorizontal="@dimen/margin_sm"
                android:text="@string/generate_pdf" />
        </LinearLayout>
    </ScrollView>


</FrameLayout>